@@ -616,8 +616,8 @@ enum FUNCTION_VALUE
 	SCREEN_LIST,
 	IRCLOG_FP,
 	DOING_NOTICE,
-	LAST_SENT_MSG_BODY,
-	SENT_NICK,
+	LAST_SENT_MSG_BODY, /* NO LONGER USED */
+	SENT_NICK, /* NO LONGER USED */
 
 	DLL_FUNCTIONS,
 	DLL_NUMERIC,
